--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: RobotoMono;
-  src: url('./fonts/RobotoMono.ttf');
+  src: url('./assets/fonts/RobotoMono.ttf');
 }
 
 #app, body, html {
